<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F6FBF5">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@mipmap/android2"
        android:layout_gravity="center">

    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encabezadoActivity2"
        android:textAlignment="center"
        android:textSize="18dp"
        android:fontFamily="casual"
        android:textColor="#6831C2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18dp"
        android:fontFamily="casual"
        android:id="@+id/ediText2"
        android:textColor="#DE7727"
        android:layout_margin="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewActivity2"
        android:textSize="14dp"
        android:fontFamily="casual"
        android:textColor="#1A3BF6"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="casual"
        android:text="@string/button3"
        android:textColor="#46FF00"
        android:textSize="20dp" />


</LinearLayout>